# SDP-Project

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
doc/util/: audio_manager.md  input.md  play_dance.md  play_video.md  score_handler.md
src/: Makefile  main.cpp
src/gameplay/: arrow.cpp  arrow.h  arrow_manager.cpp  arrow_manager.h  display_score.cpp  display_score.h  main_game.cpp  main_game.h
src/lib/: FEHImages.cpp  FEHLCD.h  Makefile
src/menu/: controls_menu.cpp  controls_menu.h  credits_menu.cpp  credits_menu.h  instructions_menu.cpp  instructions_menu.h  main_menu.cpp  main_menu.h  menus.h  music_picker_menu.cpp  music_picker_menu.h  play_game_menu.cpp  play_game_menu.h  quit_menu.cpp  quit_menu.h  score_menu.cpp  score_menu.h  statistics_menu.cpp  statistics_menu.h
src/simulator_libraries/: FEHImages.h
src/util/: audio_manager.cpp  audio_manager.h  constants.h  input.cpp  input.h  play_dance.cpp  play_dance.h  play_video.cpp  play_video.h  score_handler.cpp  score_handler.h
